harness/clients/ratatui/tests/snapshots/consent__question-inline.snap
---
source: harness/clients/ratatui/tests/consent.rs
expression: question
---
? asked by q-1
Which crate?
> orrery-proto
  orrery-kernel (default)










>
tokens — · — · execute · ^C cancel
